--- a/indexBar.html
+++ b/indexBar.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="background_styles.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <title>Responsive Navbar</title>
-</head>
-<body>
-    <nav class="navbar">
+<html>
+    <head>
+      <link rel="stylesheet" href="back-groundBarStyle.css">
+      <link rel="stylesheet" href="styleBar.css">
+      <script src="scriptBar.js" defer></script>
+      <title>Responsive Navbar</title>
+    </head>
+    <body>
+      <nav class="navbar">
         <div class="brand-title">Brand Name</div>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
@@ -21,6 +21,6 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
-      </nav> 
-</body>
+      </nav>
+    </body>
 </html>
